--- a/requirements.txt
+++ b/requirements.txt
@@ -1,38 +1,4 @@
-anyio==4.9.0
-certifi==2025.6.15
-charset-normalizer==3.4.2
-click==8.2.1
-docutils==0.21.2
-h11==0.16.0
-idna==3.10
-itsdangerous==2.2.0
-jedi==0.19.2
-joblib==1.5.1
-loro==1.5.2
-marimo==0.14.8
-Markdown==3.8.2
-narwhals==1.44.0
-nltk==3.9.1
+aif360==0.6.1
 numpy==2.3.1
-packaging==25.0
-parso==0.8.4
-psutil==7.0.0
-Pygments==2.19.2
-pymdown-extensions==10.16
-PyYAML==6.0.2
-regex==2024.11.6
-requests==2.32.4
+pandas==2.3.1
 scikit-learn==1.7.0
-scipy==1.16.0
-sniffio==1.3.1
-sonopy==0.1.2
-starlette==0.47.1
-textblob==0.19.0
-threadpoolctl==3.6.0
-tomlkit==0.13.3
-tqdm==4.67.1
-urllib3==2.5.0
-uvicorn==0.34.3
-vader==0.0.3
-vaderSentiment==3.3.2
-websockets==15.0.1
